--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,41 @@
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  check:
+  build-and-test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checagem
+      - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Configuração do Node.js
+      - name: Configurar Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'yarn'
 
-      - name: Instalação de Dependências
-        run: npm install
+      - name: Instalar dependências
+        run: yarn install --frozen-lockfile
 
-      - name: Execução de Testes
-        run: npm test
+      - name: Build da aplicação
+        run: yarn build
+
+      - name: Executar testes
+        run: yarn test --ci --reporters=default
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v4
+
+      - name: Build da imagem Docker
+        run: docker compose up -d
+
+ 
