--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,21 @@
-name: CI/CD Pipeline
+name: CI/CD
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  build-and-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout do código
+      - name: Puxar código
         uses: actions/checkout@v4
 
       - name: Configurar Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'yarn'
 
       - name: Instalar dependências
         run: yarn install --frozen-lockfile
@@ -25,17 +23,5 @@ jobs:
       - name: Build da aplicação
         run: yarn build
 
-      - name: Executar testes
-        run: yarn test --ci --reporters=default
-
-  docker:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    steps:
-      - name: Checkout do código
-        uses: actions/checkout@v4
-
-      - name: Build da imagem Docker
+      - name: Build e subir Docker
         run: docker compose up -d
-
- 
